--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vscode-mssql",
   "version": "0.0.5",
-  "displayname": "MSSQL support in VS Code",
-  "description": "Not actively maintained. Install mssql from Microsoft instead of this one.",
+  "displayname": "[Deprecated] MSSQL support in VS Code",
+  "description": "*Deprecated*. Get Microsoft's official 'mssql' extension from the VS Code Marketplace.",
   "publisher": "sanagama",
 
   "author": {
@@ -92,45 +92,6 @@
       {
         "language": "sql",
         "path": "./snippets/mssql.json"
-      }
-    ],
-
-     "commands": [
-      {
-        "command": "extension.runQuery",
-        "title": "Run T-SQL query",
-        "category": "MSSQL"
-      },
-      {
-        "command": "extension.connect",
-        "title": "Connect to a database",
-        "category": "MSSQL"
-      },
-      {
-        "command": "extension.disconnect",
-        "title": "Disconnect active connection",
-        "category": "MSSQL"
-      }
-    ],
-
-    "keybindings": [
-      {
-        "command": "extension.runQuery",
-        "key": "ctrl+shift+e",
-        "mac": "cmd+shift+e",
-        "when": "editorTextFocus && editorLangId == 'sql'"
-      },
-      {
-        "command": "extension.connect",
-        "key": "ctrl+shift+c",
-        "mac": "cmd+shift+c",
-        "when": "editorTextFocus && editorLangId == 'sql'"
-      },
-      {
-        "command": "extension.disconnect",
-        "key": "ctrl+shift+d",
-        "mac": "cmd+shift+d",
-        "when": "editorTextFocus && editorLangId == 'sql'"
       }
     ],
 
